[package]
name = "zed_llm_mock"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
uuid = { version = "1.8.0", features = ["v4"] }

# For JWT Authentication
jsonwebtoken = "9"
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = "0.4"